fix: Added an adaptation to validate display size on mobile devices, and fixed an error when manually creating students

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,10 +3,16 @@
 @tailwind components;
 @tailwind utilities;
 
-
-
 html,
 body,
 #__next {
   @apply bg-white text-black min-h-screen;
+}
+
+.h {
+  min-height: calc(var(--vh, 1vh) * 100);
+}
+
+.a {
+  background-color: red;
 }
